--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,18 @@ rank-bm25
 spacy
 symspellpy
 openai
+
+# UI and Web Application
+streamlit>=1.28.0
+streamlit-authenticator>=0.2.3
+plotly>=5.17.0
+pydeck>=0.8.0
+
+# Export and Reporting
+reportlab>=4.0.0
+openpyxl>=3.1.0
+python-docx>=1.0.0
+
+# Utilities
+python-dotenv>=1.0.0
+watchdog>=3.0.0
