feat: Add glossary feature with query augmentation and definitional routing
- Add glossary_loader.py: CSV/PDF parser for term-definition-aliases
- Update orchestrator.py: separate glossary index, query augmentation, definitional fast-path
- Update config.yaml: add glossary configuration section with path and enable flag
- Add docs/GLOSSARY_GUIDE.md: comprehensive usage guide with examples
- Add data/glossary_template.csv: starter template with 15 sample terms

Features:
- Auto-populate acronym map from glossary aliases
- Answer 'what is X' queries instantly from glossary
- Augment queries with aliases for better recall
- Optional definition preface for non-definitional queries

Closes: feature/glossary

--- a/config.yaml
+++ b/config.yaml
@@ -41,3 +41,11 @@ llm_evaluation:
   enable_caching: true  # Cache evaluation results
   temperature: 0.1      # Low temperature for consistency
   max_tokens: 500       # Maximum tokens for LLM response
+
+# Glossary Configuration
+glossary:
+  enabled: true              # Enable glossary-based query augmentation
+  path: "data/glossary.csv"  # Path to glossary file (CSV or PDF)
+  # CSV format: term,definition,aliases (pipe-separated)
+  # PDF format: simple "Term: Definition" lines
+  auto_populate_acronyms: true  # Auto-populate acronym map from aliases
