feat: Add two-pod workflow with latest_model/ storage
- Modify ingest.py: Save to latest_model/ with auto-cleanup of old indexes
- Update orchestrator.py: Load from latest_model/ instead of /workspace/storage
- Update query.py: Use latest_model/ as default storage path
- Add .gitignore: Track latest_model/ but ignore storage/ and backups
- Update config.yaml: Document new storage directory path
- Add migrate_to_latest_model.py: Migration script for existing storage/
- Update README.md: Full two-pod workflow documentation with cost savings
- Suppress pypdf warnings for malformed PDFs

Benefits:
- 93% cost savings: Ingest on A100 (.50/hr), run on CPU (.10/hr)
- Zero setup: Clone and run with pre-built index
- Version controlled: Index tracked in git, always matches code
- Fast ingestion: A100 builds index in 5-10 minutes

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,10 @@
 # Configuration for Technical RAG Pipeline with Non-Text Content Support
 
+# Storage Configuration
+storage:
+  directory: "latest_model"  # Directory for RAG index (tracked in git for two-pod workflow)
+  # Old path was "/workspace/storage" - now using "latest_model" for git tracking
+
 # Qdrant Vector Database Configuration
 qdrant:
   url: "https://your-cluster-url.qdrant.tech"  # Use Qdrant Cloud
