Clean up repository: remove test files, handlers, duplicate docs, and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ backup_storage/
 # Extracted content
 extracted_content/
 
+# Backup directories
+*_backup/
+backup_*/
+
 # Logs
 *.log
 logs/
@@ -48,6 +52,12 @@ logs/
 *.tmp
 *.bak
 *.tar.gz
+temp/
+
+# Test files
+test*.py
+mock_*.py
+*_test.py
 
 # HuggingFace cache (too large for git)
 .cache/
