--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,10 @@ openai
 ollama>=0.1.0
 anthropic>=0.40.0
 
+# Database
+boto3>=1.28.0
+botocore>=1.31.0
+
 # UI and Web Application
 blinker>=1.6.0  # Pin version to avoid distutils conflict (required by streamlit)
 streamlit>=1.28.0
