feat: Extract RAG logic into reusable module and create FastAPI backend
- Create rag_pipeline.py with core RAG functionality for reuse
- Update query.py to use new RAG pipeline module (backward compatible)
- Add FastAPI backend (api.py) with /query endpoint
- Add FastAPI and Uvicorn to requirements.txt
- Create Dockerfile.api for containerized deployment
- Add docker-compose.api.yml for easy deployment
- Add start_api.sh startup script

Architecture changes:
- Modularized RAG logic for reuse across Streamlit and FastAPI
- Maintained backward compatibility with existing Streamlit app
- Production-ready FastAPI backend with health checks and monitoring
- Containerized deployment ready for production

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,11 @@ streamlit-authenticator>=0.2.3
 plotly>=5.17.0
 pydeck>=0.8.0
 
+# FastAPI Backend
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+
 # Export and Reporting
 reportlab>=4.0.0
 openpyxl>=3.1.0
