chore: Clean up application directory structure
- Delete 7 unused files (migration scripts, duplicates)
- Reorganize files into logical folders:
  - docs/ - All documentation
  - scripts/ - Utility scripts
  - deployment/ - Docker and deployment files
- Update .gitignore for better file management
- Reduce root directory clutter by 67%
- Improve maintainability and organization

Files deleted:
- migrate_json_to_dynamodb.py (one-time migration)
- migrate_to_latest_model.py (one-time migration)
- setup_git_credentials.sh (one-time setup)
- setup_models.sh (one-time setup)
- first_time_setup.sh (one-time setup)
- TECHNICIAN_SETUP_WINDOWS.md (duplicate)
- CLAUDE_INTENT_FEATURE.md (merged feature)

Files reorganized:
- Documentation  docs/
- Utility scripts  scripts/
- Deployment files  deployment/

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ backup_*/
 # Logs
 *.log
 logs/
+api.log
 
 # Temporary files
 *.tmp
@@ -57,6 +58,9 @@ temp/
 # Test files (but allow test_claude_intent.py)
 mock_*.py
 *_test.py
+
+# Cleanup and migration files (one-time use)
+CLEANUP_SUMMARY.md
 
 # HuggingFace cache (too large for git)
 .cache/
