--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -36,7 +36,7 @@ pydantic==2.12.3
 PyMuPDF==1.26.5
 pandas==2.1.4
 numpy==2.2.6
-Pillow==12.0.0
+Pillow>=9.0.0,<12
 reportlab==4.4.4
 openpyxl==3.1.5
 python-docx==1.2.0
