--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ accelerate==1.11.0
 huggingface-hub==0.36.0
 safetensors==0.6.2
 scikit-learn==1.7.2
-numpy==2.2.6                # Latest compatible with Python 3.10
+numpy==2.2.6
 
 # -----------------------------
 # LlamaIndex
@@ -37,7 +37,7 @@ streamlit==1.50.0
 streamlit-authenticator==0.4.2
 plotly==6.3.1
 pydeck==0.9.1
-Pillow==11.3.0               # Compatible with Streamlit 1.50.0
+Pillow==11.3.0
 
 # -----------------------------
 # FastAPI Backend
