--- a/environment.yml
+++ b/environment.yml
@@ -1,64 +1,88 @@
-name: arrow
+name: rag_app
 channels:
   - conda-forge
   - pytorch
   - nvidia
   - defaults
+
 dependencies:
+  # Python
   - python=3.11
+  
+  # Core ML packages (conda handles these better)
   - pytorch=2.5.1
-  - torchvision=0.20.1
-  - torchaudio=2.5.1
+  - torchvision
+  - torchaudio
   - pytorch-cuda=12.1
-  - numpy=1.26.4
   - scikit-learn=1.7.2
-  - pandas=2.1.4
+  - numpy=1.26.4
+  - pandas=2.2.0
+  
+  # Conda packages
   - pip
+  - requests=2.32.5
+  - pyyaml=6.0.3
+  - tqdm=4.67.1
+  - watchdog=6.0.0
+  - pillow=11.3.0
+  - boto3=1.40.58
+  
+  # Pip packages (for packages not available in conda)
   - pip:
-    # HuggingFace Ecosystem
-    - transformers==4.57.1
-    - sentence-transformers==5.1.2
-    - accelerate==1.11.0
-    - huggingface-hub==0.36.0
-    - safetensors==0.6.2
+    # Fix OpenAI version conflict - use compatible version
+    - openai==1.54.4  # Compatible with llama-index
+    - anthropic==0.71.0
     
-    # LlamaIndex Ecosystem
+    # LlamaIndex (compatible versions)
     - llama-index==0.14.5
     - llama-index-core==0.14.5
     - llama-index-embeddings-huggingface==0.6.1
     - llama-index-llms-huggingface==0.6.1
     - llama-index-readers-file==0.5.4
     
-    # API Clients
-    - anthropic==0.71.0
-    - openai==2.6.1
+    # Transformers ecosystem
+    - transformers==4.57.1
+    - sentence-transformers==5.1.2
+    - accelerate==1.11.0
+    - huggingface-hub==0.36.0
+    - safetensors==0.6.2
     
-    # Web Frameworks
+    # FastAPI Backend
     - fastapi==0.120.0
     - uvicorn[standard]==0.38.0
+    - pydantic==2.12.3
+    
+    # UI
     - streamlit==1.50.0
     - streamlit-authenticator==0.4.2
+    - plotly==6.3.1
+    - pydeck==0.9.1
     
     # Document Processing
     - PyMuPDF==1.26.5
     - reportlab==4.4.4
     - openpyxl==3.1.5
     - python-docx==1.2.0
-    
-    # Visualization
-    - plotly==6.3.1
-    - pydeck==0.9.1
-    - Pillow==11.3.0
+    - python-dotenv==1.1.1
     
     # Utilities
-    - python-dotenv==1.1.1
-    - watchdog==6.0.0
-    - tqdm==4.67.1
     - nltk==3.9.2
     - rank-bm25==0.2.2
     - symspellpy==6.9.0
     - tabulate==0.9.0
-    - pyyaml==6.0.3
-    
-    # Database and Cloud
-    - boto3==1.40.58
+    - urllib3==2.5.0
+    - certifi==2025.10.5
+    - typing-extensions==4.15.0
+    - packaging==25.0
+    - setuptools==80.9.0
+    - filelock==3.20.0
+    - fsspec==2025.9.0
+    - networkx==3.4.2
+    - jinja2==3.1.6
+    - click==8.3.0
+    - h11==0.16.0
+    - anyio==4.11.0
+    - starlette==0.48.0
+    - annotated-types==0.7.0
+    - pydantic-core==2.41.4
+    - annotated-doc==0.0.2
