--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - numpy=1.26.4
   - pandas=2.2.0
   
-  # Conda packages
+  # All packages via conda (no pip conflicts)
   - pip
   - requests=2.32.5
   - pyyaml=6.0.3
@@ -26,14 +26,28 @@ dependencies:
   - watchdog=6.0.0
   - pillow=11.3.0
   - boto3=1.40.58
+  - fastapi=0.120.0
+  - uvicorn=0.38.0
+  - pydantic=2.12.3
+  - streamlit=1.50.0
+  - plotly=6.3.1
+  - pymupdf=1.26.5
+  - reportlab=4.4.4
+  - openpyxl=3.1.5
+  - python-docx=1.2.0
+  - python-dotenv=1.1.1
+  - nltk=3.9.2
+  - rank-bm25=0.2.2
+  - symspellpy=6.9.0
+  - tabulate=0.9.0
+  - anthropic=0.71.0
   
-  # Pip packages (for packages not available in conda)
+  # Only use pip for packages NOT available in conda
   - pip:
-    # Fix OpenAI version conflict - use compatible version
-    - openai==1.54.4  # Compatible with llama-index
-    - anthropic==0.71.0
+    # OpenAI with compatible version
+    - openai>=1.108.1,<2.0
     
-    # LlamaIndex (compatible versions)
+    # LlamaIndex packages (these are the problematic ones)
     - llama-index==0.14.5
     - llama-index-core==0.14.5
     - llama-index-embeddings-huggingface==0.6.1
@@ -47,42 +61,6 @@ dependencies:
     - huggingface-hub==0.36.0
     - safetensors==0.6.2
     
-    # FastAPI Backend
-    - fastapi==0.120.0
-    - uvicorn[standard]==0.38.0
-    - pydantic==2.12.3
-    
-    # UI
-    - streamlit==1.50.0
+    # Streamlit auth (not in conda)
     - streamlit-authenticator==0.4.2
-    - plotly==6.3.1
     - pydeck==0.9.1
-    
-    # Document Processing
-    - PyMuPDF==1.26.5
-    - reportlab==4.4.4
-    - openpyxl==3.1.5
-    - python-docx==1.2.0
-    - python-dotenv==1.1.1
-    
-    # Utilities
-    - nltk==3.9.2
-    - rank-bm25==0.2.2
-    - symspellpy==6.9.0
-    - tabulate==0.9.0
-    - urllib3==2.5.0
-    - certifi==2025.10.5
-    - typing-extensions==4.15.0
-    - packaging==25.0
-    - setuptools==80.9.0
-    - filelock==3.20.0
-    - fsspec==2025.9.0
-    - networkx==3.4.2
-    - jinja2==3.1.6
-    - click==8.3.0
-    - h11==0.16.0
-    - anyio==4.11.0
-    - starlette==0.48.0
-    - annotated-types==0.7.0
-    - pydantic-core==2.41.4
-    - annotated-doc==0.0.2
