--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - numpy=1.26.4
   - pandas=2.2.0
   
-  # All packages via conda (no pip conflicts)
+  # Core packages available in conda
   - pip
   - requests=2.32.5
   - pyyaml=6.0.3
@@ -26,28 +26,38 @@ dependencies:
   - watchdog=6.0.0
   - pillow=11.3.0
   - boto3=1.40.58
-  - fastapi=0.120.0
-  - uvicorn=0.38.0
-  - pydantic=2.12.3
-  - streamlit=1.50.0
   - plotly=6.3.1
-  - pymupdf=1.26.5
-  - reportlab=4.4.4
-  - openpyxl=3.1.5
-  - python-docx=1.2.0
-  - python-dotenv=1.1.1
   - nltk=3.9.2
-  - rank-bm25=0.2.2
-  - symspellpy=6.9.0
   - tabulate=0.9.0
-  - anthropic=0.71.0
   
-  # Only use pip for packages NOT available in conda
+  # All other packages via pip (not available in conda)
   - pip:
+    # FastAPI Backend
+    - fastapi==0.120.0
+    - uvicorn[standard]==0.38.0
+    - pydantic==2.12.3
+    
+    # UI
+    - streamlit==1.50.0
+    - streamlit-authenticator==0.4.2
+    - pydeck==0.9.1
+    
+    # Document Processing
+    - PyMuPDF==1.26.5
+    - reportlab==4.4.4
+    - openpyxl==3.1.5
+    - python-docx==1.2.0
+    - python-dotenv==1.1.1
+    
+    # Utilities
+    - rank-bm25==0.2.2
+    - symspellpy==6.9.0
+    - anthropic==0.71.0
+    
     # OpenAI with compatible version
     - openai>=1.108.1,<2.0
     
-    # LlamaIndex packages (these are the problematic ones)
+    # LlamaIndex packages
     - llama-index==0.14.5
     - llama-index-core==0.14.5
     - llama-index-embeddings-huggingface==0.6.1
@@ -60,7 +70,3 @@ dependencies:
     - accelerate==1.11.0
     - huggingface-hub==0.36.0
     - safetensors==0.6.2
-    
-    # Streamlit auth (not in conda)
-    - streamlit-authenticator==0.4.2
-    - pydeck==0.9.1
